integrations/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: Kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: Kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/back: "true"
        io.kompose.service: redis
    spec:
      containers:
      - env:
        - name: ALLOW_EMPTY_PASSWORD
          value: yes
        image: bitnami/redis:latest
        imagePullPolicy: ""
        name: redis
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
