integrations/splunk-otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: Kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: splunk-otel-collector
  name: splunk-otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: splunk-otel-collector
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: Kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/back: "true"
        io.kompose.network/front: "true"
        io.kompose.service: splunk-otel-collector
    spec:
      containers:
      - env:
        - name: SPLUNK_ACCESS_TOKEN
        - name: SPLUNK_REALM
        image: quay.io/signalfx/splunk-otel-collector:latest
        imagePullPolicy: ""
        name: splunk-otel-collector
        ports:
        - containerPort: 13133
        - containerPort: 14250
        - containerPort: 14268
        - containerPort: 4317
        - containerPort: 6060
        - containerPort: 7276
        - containerPort: 8888
        - containerPort: 9080
        - containerPort: 9411
        - containerPort: 9943
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
