integrations/adidas-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: Kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: adidas
  name: adidas
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: adidas
status:
  loadBalancer: {}
