integrations/email-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: Kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: email-service
  name: email-service
spec:
  ports:
  - name: "19092"
    port: 19092
    targetPort: 19092
  selector:
    io.kompose.service: email-service
status:
  loadBalancer: {}
