integrations/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: Kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  selector:
    io.kompose.service: kafka
status:
  loadBalancer: {}
