integrations/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: Kompose convert
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
  - name: "5438"
    port: 5438
    targetPort: 5432
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}
